[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/light.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplay/mouse_layer/mouse_layer.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 5
emission_ring_radius = 221.98
emission_ring_inner_radius = 97.73
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 290.97
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.01
hue_variation = 0.73
hue_variation_random = 0.73

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 480, 270 )

[node name="MouseLayer" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 20
lifetime = 2.0
randomness = 0.18
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Areas" type="Node2D" parent="."]

[node name="A" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/A"]
position = Vector2( 480, 270 )
shape = SubResource( 2 )

[node name="B" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/B"]
position = Vector2( 1440, 270 )
shape = SubResource( 2 )

[node name="C" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/C"]
position = Vector2( 480, 810 )
shape = SubResource( 2 )

[node name="D" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/D"]
position = Vector2( 1440, 810 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="Areas/A" to="." method="_on_A_mouse_entered"]
[connection signal="mouse_exited" from="Areas/A" to="." method="_on_A_mouse_exited"]
[connection signal="mouse_entered" from="Areas/B" to="." method="_on_B_mouse_entered"]
[connection signal="mouse_exited" from="Areas/B" to="." method="_on_B_mouse_exited"]
[connection signal="mouse_entered" from="Areas/C" to="." method="_on_C_mouse_entered"]
[connection signal="mouse_exited" from="Areas/C" to="." method="_on_C_mouse_exited"]
[connection signal="mouse_entered" from="Areas/D" to="." method="_on_D_mouse_entered"]
[connection signal="mouse_exited" from="Areas/D" to="." method="_on_D_mouse_exited"]
